# ExcelPar

./: .gitignore  CY_pivot.xlsx  Excel2TSV.xlsb  ExcelPar.py  JoinBKPFBSEG.py  KillProjector.py  MEMO.py  PY_pivot.xlsx  PreGL.py  PreTB.py  README.md  Run.py  a.xlsx  b.xlsx  hehe.py  importMAP.xlsx  pyproject.toml  test.py  test_PY.xlsx  test_PY2.xlsx  test_kia.py  분석보고서_기아2309_11102191_현금성자산_기타예금_기타_자국통화_Detail.xlsx
ExcelPar/: ConcatExcelFiles.py  ConcatExcelFiles_Int.py  ConcatParquet.py  ConcatTextFiles.py  ConcatTextFilesWithSlicing.py  CutGL.py  ExcelPar.py  ForKIA.py  JoinBKPFBSEG.py  PreGL.py  PreTB.py  Run.py  SaveAsGL.py  SaveAsGL_deprecated.py  SliceAndSaveGL.py  TBGLRecon.py  __init__.py  concatText.py
ExcelPar/mod/: AnalyzeAccounts.py  ChangeTBGL.py  CreateLeadReport.py  ImportGL.py  ImportTB.py  PostProcess.py  PreprocessGL.py  PreprocessTB.py  SetGlobal.py  SummarizeMonthlyVarAmount.py
ExcelPar/mylib/: ChangeColumns.py  ErrRetry.py  ForSAP.py  Object2String.py  TimeCheck.py  create_and_move_folder.py  myFileDialog.py  txt2df2db.py
MapForm/: TBGL_Recon.xlsx  acctMAP.xlsx  dtype.xlsx  importMAP.xlsx
bkup/: ExcelPar.py
ref/: acctMAP.xlsx  importMAP.xlsx
