[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'ExcelPar'
version = '0.1.1'
description = 'Analyze by python, and create Excel PAR'
readme = "README.md"
authors = [
    {name ="Sgt. Park", email="kinphw@naver.com"},
]

#Except Built-in Module
dependencies = [
    "openpyxl",    
    "pandas",
    "numpy",
    "tqdm",
    "clipboard",
]